...
            style={{
              paddingEnd: 10,
              alignItems: "center",
              borderRadius: 4,
            }}
          >
            編輯
          </Button>

          <Button
            onPress={() => {
              // check if any true in selectedPhotos array
              if (selectedPhotos.includes(true)) {
...
