...
                  </View>
                </>
              }
            />
            <View style={$reactCard}>
              <Button onPress={() => setMedias([])} preset="reversed">
                跳過全部
              </Button>
            </View>
          </View>
        )}
        <ScrollView style={$galleryContainer}>
          {mediaStore.medias && (
...
