#flow: Login
#intent:
# Open up our app and use the default credentials to login
# and navigate to the demo screen

# [namwoam]: serve the web app at http://localhost:8081
appId: com.cameraconnect # the app id of the app we want to test
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- runFlow: Login-ios.yaml
- tapOn:
      point: 100, 100
- tapOn:
      point: 100, 100
- tapOn:
      point: 100, 100
- tapOn:
      point: 100, 100
- tapOn: "相簿"
- tapOn: "創建相簿"
- tapOn:
      below: "創建相簿"
      index: 0
- inputText: "test"
- hideKeyboard
- tapOn:
      below: "創建相簿"
      index: 1
- inputText: "test"
- hideKeyboard
- tapOn: "上傳封面"
- tapOn:
      below: "Photos"
- tapOn: "Choose"
- tapOn: "確認"
- extendedWaitUntil:
      visible: "創建成功" # or any other selector
      timeout: 60000   

- tapOn: "ok"

- tapOn: "電影"
- tapOn:
      point: 100, 100

- repeat:
      times: 3
      commands:
          - swipe:
                duration: 100
                start: 10%, 50% # From (90% of width, 50% of height)
                end: 100%, 50% # To (10% of width, 50% of height)
- tapOn:
      above: "跳過全部"
      index: 0
- tapOn:
      above: "跳過全部"
      index: 1
- tapOn: "跳過全部"
- tapOn:
      below: "電影"
- tapOn:
      above: "關閉"
- tapOn: "編輯"

- tapOn:
      below: "編輯相片"
      index: 0

- inputText: "test"
- hideKeyboard
- tapOn:
      below: "編輯相片"
      index: 1
- inputText: "test"
- hideKeyboard
- tapOn: "取消"
- tapOn: "關閉"